--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -7,6 +7,6 @@
   ],
   "name": "LearnLWC",
   "namespace": "",
-  "sfdcLoginUrl": "https://test.salesforce.com",
+  "sfdcLoginUrl": "https://login.salesforce.com",
   "sourceApiVersion": "55.0"
 }
